CHROMIUM: rk3399: devfreq: Add missing monitor start/stop

We need to call devfreq_monitor_start before devfreq_monitor_suspend, to
avoid this lockdep warning:
[   27.054584] the code is fine but needs lockdep annotation.
[   27.060059] turning off the locking correctness validator.
[   27.065537] CPU: 4 PID: 1975 Comm: DrmThread Not tainted 4.4.64 #220
[   27.071879] Hardware name: Google Kevin (DT)
[   27.076141] Call trace:
[   27.078593] [<ffffffc000208ae4>] dump_backtrace+0x0/0x160
[   27.083982] [<ffffffc000208d74>] show_stack+0x20/0x28
[   27.089026] [<ffffffc00051a270>] dump_stack+0xb4/0xf0
[   27.094070] [<ffffffc000285674>] __lock_acquire+0x7d4/0x1960
[   27.099718] [<ffffffc0002870c8>] lock_acquire+0x23c/0x278
[   27.105108] [<ffffffc00023f858>] flush_work+0x54/0x280
[   27.110237] [<ffffffc00023fc90>] __cancel_work_timer+0x13c/0x1cc
[   27.116232] [<ffffffc00023fd74>] cancel_delayed_work_sync+0x24/0x30
[   27.122490] [<ffffffc00080cce4>] devfreq_monitor_suspend+0x74/0x80
[   27.128658] [<ffffffc00080e898>] rk3399_dfi_event_handler+0x118/0x184
[   27.135087] [<ffffffc00080aa30>] devfreq_suspend_device+0x40/0x4c

And since we are already set polling_ms to zero, adding those calls would
not affect other stuff.

BUG=chromium:726837
TEST=build and boot

Change-Id: I17e5ab19fb073a5c64e31b1cc1940d4a7611c87e
Signed-off-by: Jeffy Chen <jeffy.chen@rock-chips.com>
Reviewed-on: https://chromium-review.googlesource.com/517584
Commit-Ready: Douglas Anderson <dianders@chromium.org>
Reviewed-by: Douglas Anderson <dianders@chromium.org>
Reviewed-by: Derek Basehore <dbasehore@chromium.org>